fix spacing

--- a/css/timetethered.css
+++ b/css/timetethered.css
@@ -529,6 +529,11 @@
     font-size: 12px;
   }
 
+  .body-font.support {
+    left: -5px;
+    bottom: -5px;
+  }
+
   .body-font.middle-container {
     margin-left: auto;
     -webkit-box-pack: start;
@@ -634,7 +639,7 @@
   }
 
   .header-container {
-    padding-top: 100px;
+    padding-top: 60px;
   }
 
   .green-bg {
@@ -692,4 +697,3 @@
     padding-bottom: 100px;
   }
 }
-
